chore: update spec
